--- a/apollo/frontend/templates/frontend/participant_performance_list.html
+++ b/apollo/frontend/templates/frontend/participant_performance_list.html
@@ -70,8 +70,8 @@ a:hover.arrow-style{text-decoration:none; color:#333;}
                <td>{{ participant.role|default('N/A', true) }}</td>
                <td>{{ participant.phone|default('', true) }}</td>
                <td class="text-right">{{ participant.message_count|default('0', true) }}</td>
-               <td class="text-right">{{ participant.accuracy|default('100%', true) }}</td>
-               <td class="text-right">{{ participant.completion_rating }}%</td>
+               <td class="text-right">{{ participant.accurate_message_count|percent_of(participant.message_count, 100.0)|round(1) }}%</td>
+               <td class="text-right">{{ participant.completion_rating|round(1) }}%</td>
                <td class="text-center"><div class="raty" data-score="3.5" data-number="5"></div></td>
                <td class="text-center"><a href="">{% trans %}View{% endtrans %}</a></td>
              </tr>
