--- a/apollo/frontend/templates/frontend/participant_performance_detail.html
+++ b/apollo/frontend/templates/frontend/participant_performance_detail.html
@@ -4,51 +4,63 @@
 <div class="col-md-12">
 <div class="panel panel-default">
 <div class="panel-heading">
-<h3 class="panel-title">Participant detail</h3>
+<h3 class="panel-title">{% trans %}Participant Detail{% endtrans %}</h3>
 </div>
+{% set accuracy = participant.accurate_message_count|percent_of(participant.message_count, 100.0) %}
+{% set completion = participant.completion_rating|percent_of(1, 100.0) %}
 <table class="table table-bordered">
 <tr>
-<th>Participant</th>
+<th>{% trans %}Participant{% endtrans %}</th>
 <td>{{ participant.name }} (<strong>{{ participant.participant_id }}</strong>)</td>
 </tr>
 <tr>
-<th>Phone numbers</th>
+<th>{% trans %}Phone Numbers{% endtrans %}</th>
 <td>{{ participant.phones|join(', ', attribute='number') }}</td>
 </tr>
 <tr>
-<th>Messages sent</th>
+<th>{% trans %}Messages Sent{% endtrans %}</th>
 <td>{{ participant.message_count }}</td>
 </tr>
 <tr>
-<th>Completion</th>
-<td>{{ participant.completion_rating|round(1) }}%</td>
+<th>{% trans %}Accuracy{% endtrans %}</th>
+<td>{{ accuracy|round(0) }}%</td>
 </tr>
 <tr>
-<th>Accuracy</th>
-<td>{{ participant.accurate_message_count|percent_of(participant.message_count, 100.0)|round(1) }}%</td>
+<th>{% trans %}Completion{% endtrans %}</th>
+<td>{{ completion|round(0) }}%</td>
+</tr>
+<tr>
+<th>{% trans %}Rating{% endtrans %}</th>
+<td><div class="raty" data-score="{{ (accuracy + completion)/200 * 5 }}" data-number="5"></div></td>
 </tr>
 </table>
 </div>
-<div class="panel panel-info">
+<div class="panel panel-default">
 <div class="panel-heading">
-<h3 class="panel-title">Message detail</h3>
+<h3 class="panel-title">{% trans %}Messages{% endtrans %}</h3>
 </div>
-<table class="table table-bordered">
+<table class="table table-striped table-bordered table-hover" style="table-layout:fixed">
 <thead>
 <tr>
-<th>Message text</th>
-<th>Received from</th>
-<th>Date received</th>
-<th>Time received</th>
+    <th width="10%">{% trans %}Date{% endtrans %}</th>
+    <th width="10%">{% trans %}Time{% endtrans %}</th>
+    <th width="15%">{% trans %}Mobile{% endtrans %}</th>
+    <th width="65%">{% trans %}Text{% endtrans %}</th>
 </tr>
 </thead>
 <tbody>
 {% for msg in messages %}
 <tr>
-<td>{{ msg.text }}</td>
-<td>{{ msg.sender }}</td>
 <td class="timestamp-date" data-timestamp="{{ msg.received|timestamp }}">{{ msg.received.strftime('%b %d %Y') }}</td>
 <td class="timestamp-time" data-timestamp="{{ msg.received|timestamp }}">{{ msg.received.strftime('%I:%M %p') }}</td>
+<td>{{ msg.sender }}</td>
+<td>{{ msg.text }}</td>
+</tr>
+{% else %}
+<tr class="warning">
+    <td class="text-center" colspan="4">
+        {% trans %}No Data Available{% endtrans %}
+    </td>
 </tr>
 {% endfor %}
 </tbody>
@@ -58,9 +70,20 @@
 </div>
 {% endblock %}
 {% block scripts %}
+<script src="{{ url_for('static', filename='js/jquery.raty.js') }}"></script>
 <script src="{{ url_for('static', filename='js/moment-with-langs.min.js') }}"></script>
 <script type="text/javascript">
+$(function(){
   moment.lang('{{ g.locale }}');
+  $('div.raty').raty({
+      number: function() { return $(this).data('number'); },
+      score: function() { return $(this).data('score'); },
+      readOnly: true,
+      starOn: '{{ url_for('static', filename='img/star-on.png') }}',
+      starOff: '{{ url_for('static', filename='img/star-off.png') }}',
+      starHalf: '{{ url_for('static', filename='img/star-half.png') }}'
+  });
+});
 </script>
 <script src="{{ url_for('static', filename='js/timestamps.js') }}"></script>
 {% endblock %}
