--- a/apollo/frontend/templates/frontend/macros/participant_header_form.html
+++ b/apollo/frontend/templates/frontend/macros/participant_header_form.html
@@ -1,33 +1,21 @@
 {% macro render_mapping_form(form) %}
-<div class="panel panel-default">
-	<div class="panel-heading">
-		<h3>{% trans %}Step 2 - Import participants{% endtrans %}</h3>
+<div class="col-sm-10">
+	{{ form.hidden_tag() }}
+	<input type="hidden" name="action" id="form-action" value="{{ request.url }}">
+	{%- for field in form -%}
+	{%- if field.type != 'CSRFTokenField' -%}
+	<div class="form-group {% if field.errors %}has-error{% endif %}">
+		{{ field.label(class_='col-sm-4 control-label') }}
+		<div class="col-sm-8">
+			{{ field(class_='form-control input-sm') }}
+			{% if field.errors %}
+			{% for e in field.errors %}
+			<p class="help-block">{{ e }}</p>
+			{% endfor %}
+			{% endif %}
+		</div>
 	</div>
-	<div class="panel-body">
-		<form class="form-inline" method="POST">
-			{{ form.hidden_tag() }}
-			<fieldset>
-				{%- if form.errors.me -%}
-				<div class="alert alert-danger">{{ form.errors.me }}</div>
-				{%- endif -%}
-				{%- for field in form -%}
-				{%- if field.type != 'CSRFTokenField' -%}
-				<div class="form-group {% if field.errors %}has-error{% endif %}">
-					{{ field.label }}
-					{{ field(class_='form-control span2') }}
-					{% if field.errors %}
-					{% for e in field.errors %}
-					<p class="help-block">{{ e }}</p>
-					{% endfor %}
-					{% endif %}
-				</div>
-				{%- endif -%}
-				{%- endfor -%}
-				<div class="form-group form-group-custom">
-					<button class="btn btn-danger" type="submit"><i class="glyphicon glyphicon-import"></i> Import</button>
-				</div>
-			</fieldset>
-		</form>
-	</div>
+	{%- endif -%}
+	{%- endfor -%}
 </div>
 {% endmacro %}
