--- a/apollo/frontend/templates/frontend/critical_incidents_locations.html
+++ b/apollo/frontend/templates/frontend/critical_incidents_locations.html
@@ -1,105 +1,79 @@
-{% extends "core/layout.html" %}
-{% load apollo %}{% load static %}{% load i18n %}
-{% block javascripts %}
-{% endblock %}
-{% block title %}
-{{ page_title }}
-{% if perms.core.export_submissions %}
-<div class="btn-group pull-right">
-  <form method="get"><input type="hidden" name="export" value="true" /><button class="btn" type="submit">{% trans "Export" context "verb" %}</a></form>
-</div>
-{% endif %}
-{% endblock %}
+{% extends 'frontend/_layout.html' %}{% from 'frontend/macros/analysis_breadcrumb.html' import render_analysis_breadcrumb -%}{% from 'frontend/macros/analysis_navigation.html' import render_analysis_navigation %}
 {% block content %}
 <div class="row">
-	<div class="span5">
-		{% analysis_breadcrumb_navigation form location %}
-  	</div>
-  	<div class="span7">
-        <form class="form-horizontal pull-right" action="" method="get" accept-charset="utf-8">
-          {{ filter_form.status }} {{ filter_form.witness }} {{ filter_form.sample }}
-          <button class="btn btn-warning" type="submit"><i class="icon-search icon-white"></i> {% trans "Filter" context "verb" %}</button>
-        </form>
-  	</div>
-    <div class="span12">
-        {% analysis_location_navigation form location %}
+  <div class="col-md-5">
+    {{ render_analysis_breadcrumb(breadcrumb_data) }}
+  </div>
+  <div class="col-md-7">
+    <form class="form-horizontal pull-right" method="GET" accept-charset="utf-8">
+      {{ filter_form.status }} {{ filter_form.witness }} {{ filter_form.sample }}
+      <button class="btn btn-warning" type="submit"><i class="icon-search icon-white"></i> {% trans %}Filter{% endtrans %}</button>
+    </form>
+  </div>
+  <div class="col-md-12">
+    {{ render_analysis_navigation(navigation_data) }}
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-12">
+    {% if incidents %}
+    <div class="tabbable">
+      <ul class="nav nav-tabs">
+        <li class="active"><a href="#table" data-toggle="tab">{% trans %}Table{% endtrans %}</a></li>
+      </ul>
+      <div class="tab-content">
+        <div class="tab-pane active" id="table">
+          <table class="table table-bordered table-striped">
+            <tr>
+              <td colspan="{{ 6 + location_types.count() }}"><strong>{{ form_field.name }}</strong> &middot; {{ form_field.description }}</td>
+            </tr>
+            <tr>
+              <th>{% trans %}Observer ID{% endtrans %}</th>
+              <th>{% trans %}Name{% endtrans %}</th>
+              {% for lt in location_types %}
+              <th>{{ lt.name }}</th>
+              {% endfor %}
+              <th>{% trans %}Location{% endtrans %}</th>              
+              <th style="text-align:center">{% trans %}Witnessed{% endtrans %}</th>              
+              <th style="text-align:center" width="50">{% trans %}Status{% endtrans %}</th>              
+              <th>{% trans %}Description{% endtrans %}</th>              
+            </tr>
+            {% for incident in incidents %}
+            <tr>
+              <td>{{ incident.contributor.participant_id|default }}</td>
+              <td>{{ incident.contributor.name|default }}</td>
+              {% for lt in location_types %}
+              <td>{{ incident|get_location_for_type(lt) }}</td>
+              {% endfor %}
+              <td>{{ incident.location }} &middot; <em class"muted">{{ incident.location.location_type }}</em></td>
+              <td style="text-align:center">
+              {%- if incident.witness == 'witnessed' -%}
+              <i class="glyphicon glyphicon-eye-open"></i>
+              {%- elif incident.witness == 'after' -%}
+              <i class="glyphicon glyphicon-eye-close"></i>
+              {%- elif incident.witness == 'reported' -%}
+              <i class="glyphicon glyphicon-user"></i>
+              {%- else -%}
+              &nbsp;
+              {%- endif -%}
+              </td>
+              <td style="text-align:center">
+              {% if incident.status == 'confirmed' %}
+              <img src="{{ url_for('static', filename='img/tick.png') }}" title="{% trans %}Confirmed{% endtrans %}" alt="{% trans %}Confirmed{% endtrans %}" />
+              {% elif incident.status == 'rejected' %}
+              <img src="{{ url_for('static', filename='img/red_dot.png') }}" title="{% trans %}Rejected{% endtrans %}" alt="{% trans %}Rejected{% endtrans %}" />
+              {% else %}
+              <img src="{{ url_for('static', filename='img/caution.png') }}" title="{% trans %}Unmarked{% endtrans %}" alt="{% trans %}Unmarked{% endtrans %}" />
+              {% endif %}
+              </td>
+              <td>{{ incident.incident_comment }}</td>
+            </tr>
+            {% endfor %}
+          </table>
+        </div>
+      </div>
     </div>
- </div>
- <div class="row">
-	<div class="span12">
-		{% if incidents %}
-		<div class="tabbable"> <!-- Only required for left/right tabs -->
-			<ul class="nav nav-tabs">
-				<li class="active"><a href="#table" data-toggle="tab">{% trans "Table" %}</a></li>
-				<!--<li><a href="#map" data-toggle="tab" onclick="init_map();">{% trans "Map" %}</a></li>-->
-			</ul>
-			<div class="tab-content">
-			    <div class="tab-pane active" id="table">
-<table class="table table-bordered table-striped">
-    <tr>
-        <td colspan="{{ 6|add:location_types.count }}"><strong>{{ form_field.tag }}</strong> · {{ form_field.description }}</td>
-    </tr>
-	<tr>
-        <th>{% trans "Observer ID" %}</th>
-        <th>{% trans "Name" %}</th>
-        {% for lt in location_types %}
-        <th>{{ lt.name }}</th>
-        {% endfor %}
-        <th>{% trans "Location" %}</th>
-        <th style="text-align: center">{% trans "Witnessed" %}</th>
-        <th style="text-align: center" width="50">{% trans "Status" %}</th>
-		<th>{% trans "Description" %}</th>
-	</tr>
-    {% for incident in incidents %}
-	<tr>
-        <td>{{ incident.observer.observer_id|default_if_none:"" }}</td>
-        <td>{{ incident.observer.name|default_if_none:"" }}</td>
-        {% for lt in location_types %}
-        <td>{% get_location_for_type incident lt %}</td>
-        {% endfor %}
-        <td>{{ incident.location }} · <em class="muted">{{ incident.location.type }}</em></td>
-        <td style="text-align: center">
-        {% with incident.data.witness as witness %}
-        {% if witness == 'witnessed' %}
-            <i class="icon-eye-open" title="{% trans "Witnessed incident" %}"></i>
-        {% elif witness == 'after' %}
-            <i class="icon-eye-close" title="{% trans "Arrived after incident" %}"></i>
-        {% elif witness == 'reported' %}
-            <i class="icon-user" title="{% trans "Incident was reported" %}"></i>
-        {% else %}
-            &nbsp;
-        {% endif %}
-        {% endwith %}
-        </td>
-        <td style="text-align: center">
-        {% with incident.data.status as status %}
-        {% if status == 'confirmed' %}
-        <img src="{% static "img/tick.png" %}" title="{% trans "Confirmed" %}" alt="{% trans "Confirmed" %}" />
-        {% elif status == 'rejected' %}
-        <img src="{% static "img/red_dot.png" %}" title="{% trans "Rejected" %}" alt="{% trans "Rejected" %}" />
-        {% else %}
-        <img src="{% static "img/caution.png" %}" title="{% trans "Unmarked" %}" alt="{% trans "Unmarked" %}" />
-        {% endif %}
-        {% endwith %}
-        </td>
-		<td>{{ incident.data.description }}</td>
-	</tr>
-    {% endfor %}
-</table>
-				</div>
-				<!--Map-->
-				<div class="tab-pane" id="map">
-					<div id="map_canvas" style="width:100%; height:550px; margin-bottom:40px;"></div>
-				</div>
-			</div>
-		</div>
-		{% else %}
-		<table class="table table-striped table-bordered table-hover">
-			<tr class="warning">
-				<td style="text-align:center">{% trans "No Data Available" %}</td>
-			</tr>
-		</table>
-		{% endif %}
-	</div>
+    {% endif %}
+  </div>
 </div>
 {% endblock %}
