bug fix: redirect only to next parameter submitted through the form and not the url argument

--- a/apollo/frontend/templates/frontend/macros/submission_list_macros.html
+++ b/apollo/frontend/templates/frontend/macros/submission_list_macros.html
@@ -58,7 +58,7 @@
     </td>
     {% endif %}
     <td style="text-align: center"><img src="{% if submission.sender_verified %}{{ url_for('static', filename='img/tick.png') }}{% else %}{{ url_for('static', filename='img/caution.png') }}{% endif %}" title="{% if submission.sender_verified %}{% trans %}Verified{% endtrans %}{% else %}{% trans %}Unverified{% endtrans %}{% endif %}" height="11" width="11" /></td>
-    {% if perms.edit_submission.can() %}<td class="text-center"><a href="{{ url_for('submissions.submission_edit', submission_id=submission.pk, next=request.url) }}">{% trans %}Edit{% endtrans %}</a></td>{% endif %}
+    {% if perms.edit_submission.can() %}<td class="text-center"><a href="{{ url_for('submissions.submission_edit', submission_id=submission.pk) }}">{% trans %}Edit{% endtrans %}</a></td>{% endif %}
 </tr>
 {% else %}
 {% if perms.edit_submission.can() %}
