--- a/apollo/frontend/templates/frontend/submission_edit.html
+++ b/apollo/frontend/templates/frontend/submission_edit.html
@@ -14,6 +14,7 @@
 {% endblock %}
 {% block content %}{% set form, siblings, master = submission.form, submission.siblings, submission.master %}
 <form method="POST">
+<input type="hidden" name="next" value="{{ request.environ.get('HTTP_REFERER', '') }}" />
 <div>
 <table class="table table-bordered">
 {%- if form.form_type == 'CHECKLIST' -%}
