Changed smart quotes to dumb quotes

--- a/apollo/frontend/templates/frontend/login_user.html
+++ b/apollo/frontend/templates/frontend/login_user.html
@@ -56,7 +56,7 @@
       </div>
     </div>
     <script type="text/javascript">
-      inptElements.setAttribute(“autocomplete”,”off”);
+      inptElements.setAttribute("autocomplete","off");
     </script>
   </body>
 </html>
